--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "pypdf>=4.0.0",
     "landingai-ade",
     "llama-parse",
-    "llama-index"
+    "llama-index",
+    "docling"
 ]
 
 [project.scripts]
